# 12PoolBot

./: .gitignore  CHANGELOG.md  README.md  config.yml  pyproject.toml  run.py  setup.py  zerg_builds.yml
.github/workflows/: ladder_zip.yml
bot/: action.py  actions.py  combat_predictor.py  combat_predictor_grid.py  combat_predictor_sim.py  consts.py  data.py  macro.py  main.py  micro.py  result_predictor.py  strategy.py  tags.py
bot/components/: combat_predictor.py  component.py  macro.py  micro.py  strategy.py  tags.py
bot/components/macro/: macro.py  macro_action.py
bot/extensions/: dijkstra.py  poisson_multigrid.py
bot/utils/: _dijkstra.py  cpp_priority_queue.hpp  debug.py  dijkstra.py  dijkstra.pyx  numerics.py  poisson_multigrid.py
combat_simulation/: combat.py  combat_simulation.ipynb  run_combat_sim.py
cython_extensions/: __init__.py  bootstrap.pyx  combat_utils.pyi  combat_utils.pyx  dijkstra.pyi  dijkstra.pyx  general_utils.pyi  general_utils.pyx  geometry.pyi  geometry.pyx  map_analysis.pyi  numpy_helper.pyi  placement_solver.pyi  placement_solver.pyx  unit_data.pyx  units_utils.pyi  units_utils.pyx
data/: None-zerg.json
notebooks/: multigrid_experiments.ipynb  pathfinding_cython.ipynb  pathfinding_experiments.ipynb
scripts/: compile_cython.py  create_ladder_zip.py  upload_to_ai_arena.py  write_commit_to_file.py
