[tool.poetry]
name = "ares-sc2-starter-bot"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "ares-sc2/src/ares"}]

[tool.poetry.dependencies]
ares-sc2 = { path = "ares-sc2", develop = false }
python = ">=3.11, <3.12"
black = "^23.1.0"
isort = "^5.12.0"
requests = "^2.32.3"
scikit-image = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.black]
extend-exclude = 'ares-sc2/*'
line-length = 120

[tool.isort]
profile = "black"
skip_glob = ["ares-sc2/*"]

[[tool.mypy.overrides]]
module = [
    "ares.*",
    "sc2.*",
    "scipy.*",
    "sklearn.*",
]
ignore_missing_imports = true